tests/baselines/reference/parser536727.errors.txt
parser536727.ts(7,5): error TS2345: Argument of type '() => (x: string) => string' is not assignable to parameter of type '(x: string) => string'.
  Type '(x: string) => string' is not assignable to type 'string'.
parser536727.ts(8,5): error TS2345: Argument of type '() => (x: string) => string' is not assignable to parameter of type '(x: string) => string'.
  Type '(x: string) => string' is not assignable to type 'string'.


==== parser536727.ts (2 errors) ====
    function foo(f: (x: string) => string) {
        return f("");
    }
    var g = (x: string) => x + "blah";
    var x = () => g;
    foo(g);
    foo(() => g);
        ~~~~~~~
!!! error TS2345: Argument of type '() => (x: string) => string' is not assignable to parameter of type '(x: string) => string'.
!!! error TS2345:   Type '(x: string) => string' is not assignable to type 'string'.
!!! related TS6212 parser536727.ts:7:5: Did you mean to call this expression?
    foo(x);
        ~
!!! error TS2345: Argument of type '() => (x: string) => string' is not assignable to parameter of type '(x: string) => string'.
!!! error TS2345:   Type '(x: string) => string' is not assignable to type 'string'.
!!! related TS6212 parser536727.ts:8:5: Did you mean to call this expression?
    